--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ dash==2.9.2
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+DateTime==5.1
 debugpy==1.6.6
 decorator==5.1.1
 defusedxml==0.7.1
@@ -114,3 +115,4 @@ widgetsnbextension==4.0.7
 xlwings==0.25.1
 xyzservices==2023.2.0
 zipp==3.15.0
+zope.interface==6.0
